[package]
name = "wechat-sdk"
version = "0.1.0"
license = "MIT"
description = "WeChat SDK"
authors = ["thewawar <thewawar@gmail.com>"]
keywords = ["wechat", "sdk", "pay"]
repository = "https://github.com/TheWaWaR/wechat-sdk"


[dependencies]
# reqwest = "0.7.3"
url = "1.5.1"
curl = "0.4.8"
http = "0.1.0"
xml-rs = "0.6.1"
md5 = "0.3.5"
uuid = {version="0.5", features=["v4"]}
